--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <body>
 
-    <canvas id="canvas"></canvas>
+    <div id="dimensions">
+        <canvas id="canvas"></canvas>
+    </div>
 
     <script src="script.js"></script>
 
