Refactored script.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <canvas id="canvas"></canvas>
     </div>
 
-    <script src="script.js"></script>
+    <script src="ball-bouncing.js"></script>
+    <script src="app.js"></script>
 
 </body>
 
