Refactoring, added Vector2d and Ball classes

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <canvas id="canvas"></canvas>
     </div>
 
+    <script src="vector2d.js"></script>
+    <script src="ball.js"></script>
     <script src="ball-bouncing.js"></script>
     <script src="app.js"></script>
 
