New structure, added support for NodeJS

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
     <title>Bouncing Balls</title>
 
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 
@@ -47,10 +47,10 @@
         <input type="button" id="start" value="Start"/>
     </div>
 
-    <script src="vector2d.js"></script>
-    <script src="ball.js"></script>
-    <script src="ball-bouncing.js"></script>
-    <script src="app.js"></script>
+    <script src="js/vector2d.js"></script>
+    <script src="js/ball.js"></script>
+    <script src="js/ball-bouncing.js"></script>
+    <script src="js/app.js"></script>
 
 </body>
 
