Fixed some physics bugs

--- a/src/index.html
+++ b/src/index.html
@@ -48,9 +48,9 @@
     </div>
 
     <script src="js/vector2d.js"></script>
-    <script src="js/ball.js"></script>
-    <script src="js/ball-bouncing.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/balls.js"></script>
+    <script src="js/bouncing-balls.js"></script>
+    <script src="js/choice.js"></script>
 
 </body>
 
